add image and a couple of code

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Test 1 2 3 </title>
+
+	</head>
+		<body>
 <h1>Hey, I'm a stuff</h1>
-<p>hey im still a stuff</p>
+<p>hey im <b>still a stuff</b></p>
 <a href="https://google.com" target="blank" title="It gonna go to google">click me</a>
+<img src="img/dog.jpeg">
+		</body>
+</html>
