--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 	</head>
 		<body>
 <h1>Hey, I'm a stuff</h1>
-<p>hey im <b>still a stuff</b></p>
+<p>hey im <b>still a stuff (much more shittier)</b></p>
 <a href="https://google.com" target="blank" title="It gonna go to google">click me</a>
 <img src="img/dog.jpeg">
 		</body>
