wrote a ton of css and changed up some of the html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Ben 10</title>
 	<link rel="icon" href="img/icon.png">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 
@@ -17,7 +19,7 @@
 		<h2>About Ben 10</h2>
 		<p>He is a boy that can tramform in to anorther form of outer space Alien, and he uses it to protect the world from the bad guy.</p>
 		<img src="img/ben10-1.jpg">
-		<p>Ben 10 With Some of the Aliens</p>
+		<p class="caption">Ben 10 With Some of the Aliens</p>
 
 		<!-- My favorite Aliens -->
 		<h2>And the Favorites of Mine</h2>
